--- a/.pylintrc
+++ b/.pylintrc
@@ -7,12 +7,11 @@
 
 [MASTER]
 
-# Add files or directories to the blacklist. They should be base names, not
-# paths.
+# Files or directories to be skipped. They should be base names, not paths.
 ignore=third_party
 
-# Add files or directories matching the regex patterns to the blacklist. The
-# regex matches against base names, not paths.
+# Files or directories matching the regex patterns are skipped. The regex
+# matches against base names, not paths.
 ignore-patterns=
 
 # Pickle collected data for later comparisons.
@@ -28,11 +27,6 @@ jobs=4
 # Allow loading of arbitrary C extensions. Extensions are imported into the
 # active Python interpreter and may run arbitrary code.
 unsafe-load-any-extension=no
-
-# A comma-separated list of package or module names from where C extensions may
-# be loaded. Extensions are loading into the active Python interpreter and may
-# run arbitrary code
-extension-pkg-whitelist=
 
 
 [MESSAGES CONTROL]
@@ -56,12 +50,16 @@ confidence=
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=apply-builtin,
+disable=abstract-method,
+        apply-builtin,
+        arguments-differ,
         attribute-defined-outside-init,
         backtick,
         bad-option-value,
+        basestring-builtin,
         buffer-builtin,
         c-extension-no-member,
+        consider-using-enumerate,
         cmp-builtin,
         cmp-method,
         coerce-builtin,
@@ -82,14 +80,16 @@ disable=apply-builtin,
         import-error,
         import-self,
         import-star-module-level,
+        inconsistent-return-statements,
         input-builtin,
         intern-builtin,
         invalid-str-codec,
-        invalid-unary-operand-type,
         locally-disabled,
         long-builtin,
         long-suffix,
         map-builtin-not-iterating,
+        misplaced-comparison-constant,
+        missing-function-docstring,
         metaclass-assignment,
         next-method-called,
         next-method-defined,
@@ -98,7 +98,9 @@ disable=apply-builtin,
         no-else-continue,
         no-else-raise,
         no-else-return,
+        no-init,  # added
         no-member,
+        no-name-in-module,
         no-self-use,
         nonzero-method,
         oct-method,
@@ -128,18 +130,21 @@ disable=apply-builtin,
         too-many-branches,
         too-many-instance-attributes,
         too-many-locals,
+        too-many-nested-blocks,
         too-many-public-methods,
         too-many-return-statements,
         too-many-statements,
         trailing-newlines,
         unichr-builtin,
         unicode-builtin,
+        unnecessary-pass,
         unpacking-in-except,
         useless-else-on-loop,
+        useless-object-inheritance,
         useless-suppression,
         using-cmp-argument,
-        xrange-builtin,
         wrong-import-order,
+        xrange-builtin,
         zip-builtin-not-iterating,
 
 
@@ -256,8 +261,6 @@ ignored-classes=optparse.Values,thread._local,_thread._local
 # expressions are accepted.
 generated-members=
 
-# List of decorators that change the signature of a decorated function.
-signature-mutators=toolz.functoolz.curry
 
 [FORMAT]
 
@@ -304,6 +307,13 @@ expected-line-ending-format=
 notes=TODO
 
 
+[STRING]
+
+# This flag controls whether inconsistent-quotes generates a warning when the
+# character used as a quote delimiter is used inconsistently within a module.
+check-quote-consistency=yes
+
+
 [VARIABLES]
 
 # Tells whether we should check for unused import in __init__ files.
@@ -330,7 +340,7 @@ redefining-builtins-modules=six,six.moves,past.builtins,future.builtins,functool
 
 # Logging modules to check that the string format arguments are in logging
 # function parameter format
-logging-modules=logging,absl.logging,tensorflow.google.logging
+logging-modules=logging,absl.logging,tensorflow.io.logging
 
 
 [SIMILARITIES]
